<resources>
    <string name="app_name">Quick News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="permission_required">Permission required for updating your photo.</string>
    <string name="latest_news">Latest News</string>
    <string name="favorite_news">Favorite News</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full Name</string>
    <string name="valid_email">Valid Email</string>
    <string name="strong_password">Strong Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="next">Next </string>
    <string name="already_a_member">Already a member? </string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="new_member">New Member?</string>
    <string name="register">Register now</string>
    <string name="remember_me">Remember Me</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="business">Business</string>
    <string name="crime">Crime</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="tourism">Tourism</string>
    <string name="world">World</string>
    <string name="other">Other</string>
    <string name="searchview_hint">Dogecoin to the Moon..</string>
    <string name="country">Country</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="notifications">Notifications</string>

</resources>