<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.password.PasswordFragment">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/canvas_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:alpha="0.2"
            android:background="@drawable/edittext_background"
            android:clickable="false"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatButton>


        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/lockk"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_20sdp"
            android:textAlignment="textStart"
            android:textColor="@color/redBlack"
            android:textColorHint="@color/redBlack"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/canvas_password"
            app:layout_constraintEnd_toEndOf="@+id/canvas_password"
            app:layout_constraintStart_toStartOf="@+id/canvas_password"
            app:layout_constraintTop_toTopOf="@+id/canvas_password"></EditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/canvas_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:alpha="0.2"
            android:background="@drawable/edittext_background"
            android:clickable="false"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/canvas_password"></androidx.appcompat.widget.AppCompatButton>


        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/lockk"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_20sdp"
            android:textAlignment="textStart"
            android:textColor="@color/redBlack"
            android:textColorHint="@color/redBlack"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/canvas_password_confirm"
            app:layout_constraintEnd_toEndOf="@+id/canvas_password_confirm"
            app:layout_constraintStart_toStartOf="@+id/canvas_password_confirm"
            app:layout_constraintTop_toTopOf="@+id/canvas_password_confirm"></EditText>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/button_background"
            android:ems="10"
            android:fontFamily="@font/mulish_semibold"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/canvas_password_confirm"></androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>